feat: add func_pwm_fan_on allowing to set duty and frequency

--- a/yc_stm32_practice.ioc
+++ b/yc_stm32_practice.ioc
@@ -4,7 +4,45 @@ CAD.pinconfig=
 CAD.provider=
 Dma.Request0=USART2_TX
 Dma.Request1=USART2_RX
-Dma.RequestsNb=2
+Dma.Request2=USART1_TX
+Dma.Request3=USART1_RX
+Dma.Request4=USART3_TX
+Dma.Request5=USART3_RX
+Dma.RequestsNb=6
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.3.EventEnable=DISABLE
+Dma.USART1_RX.3.Instance=DMA1_Channel3
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.3.Mode=DMA_NORMAL
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_LOW
+Dma.USART1_RX.3.RequestNumber=1
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_RX.3.SignalID=NONE
+Dma.USART1_RX.3.SyncEnable=DISABLE
+Dma.USART1_RX.3.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_RX.3.SyncRequestNumber=1
+Dma.USART1_RX.3.SyncSignalID=NONE
+Dma.USART1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.2.EventEnable=DISABLE
+Dma.USART1_TX.2.Instance=DMA1_Channel4
+Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.2.Mode=DMA_NORMAL
+Dma.USART1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART1_TX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART1_TX.2.RequestNumber=1
+Dma.USART1_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART1_TX.2.SignalID=NONE
+Dma.USART1_TX.2.SyncEnable=DISABLE
+Dma.USART1_TX.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART1_TX.2.SyncRequestNumber=1
+Dma.USART1_TX.2.SyncSignalID=NONE
 Dma.USART2_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.1.EventEnable=DISABLE
 Dma.USART2_RX.1.Instance=DMA1_Channel2
@@ -39,6 +77,40 @@ Dma.USART2_TX.0.SyncEnable=DISABLE
 Dma.USART2_TX.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
 Dma.USART2_TX.0.SyncRequestNumber=1
 Dma.USART2_TX.0.SyncSignalID=NONE
+Dma.USART3_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART3_RX.5.EventEnable=DISABLE
+Dma.USART3_RX.5.Instance=DMA1_Channel6
+Dma.USART3_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.USART3_RX.5.Mode=DMA_NORMAL
+Dma.USART3_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_RX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_RX.5.Priority=DMA_PRIORITY_LOW
+Dma.USART3_RX.5.RequestNumber=1
+Dma.USART3_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_RX.5.SignalID=NONE
+Dma.USART3_RX.5.SyncEnable=DISABLE
+Dma.USART3_RX.5.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_RX.5.SyncRequestNumber=1
+Dma.USART3_RX.5.SyncSignalID=NONE
+Dma.USART3_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART3_TX.4.EventEnable=DISABLE
+Dma.USART3_TX.4.Instance=DMA1_Channel5
+Dma.USART3_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART3_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART3_TX.4.Mode=DMA_NORMAL
+Dma.USART3_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART3_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART3_TX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.USART3_TX.4.Priority=DMA_PRIORITY_LOW
+Dma.USART3_TX.4.RequestNumber=1
+Dma.USART3_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.USART3_TX.4.SignalID=NONE
+Dma.USART3_TX.4.SyncEnable=DISABLE
+Dma.USART3_TX.4.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.USART3_TX.4.SyncRequestNumber=1
+Dma.USART3_TX.4.SyncSignalID=NONE
 File.Version=6
 KeepUserPlacement=false
 Mcu.CPN=STM32G071RBT6
@@ -47,26 +119,35 @@ Mcu.IP0=DMA
 Mcu.IP1=NVIC
 Mcu.IP2=RCC
 Mcu.IP3=SYS
-Mcu.IP4=USART2
-Mcu.IPNb=5
+Mcu.IP4=TIM2
+Mcu.IP5=USART1
+Mcu.IP6=USART2
+Mcu.IP7=USART3
+Mcu.IPNb=8
 Mcu.Name=STM32G071R(6-8-B)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13
-Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin3=PF0-OSC_IN (PF0)
-Mcu.Pin4=PA2
-Mcu.Pin5=PA3
-Mcu.Pin6=PA5
-Mcu.Pin7=PA13
-Mcu.Pin8=PA14-BOOT0
-Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=10
+Mcu.Pin0=PC11
+Mcu.Pin1=PC13
+Mcu.Pin10=PC5
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14-BOOT0
+Mcu.Pin13=PC10
+Mcu.Pin14=VP_SYS_VS_Systick
+Mcu.Pin2=PC14-OSC32_IN (PC14)
+Mcu.Pin3=PC15-OSC32_OUT (PC15)
+Mcu.Pin4=PF0-OSC_IN (PF0)
+Mcu.Pin5=PA0
+Mcu.Pin6=PA2
+Mcu.Pin7=PA3
+Mcu.Pin8=PA5
+Mcu.Pin9=PC4
+Mcu.PinsNb=15
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071RBTx
 MxCube.Version=6.15.0
 MxDb.Version=DB.6.0.150
+NVIC.DMA1_Ch4_7_DMAMUX1_OVR_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DMA1_Channel2_3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.ForceEnableDMAVector=true
@@ -75,7 +156,10 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:false
+NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.USART3_4_LPUART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+PA0.Signal=S_TIM2_CH1_ETR
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=TMS
 PA13.Locked=true
@@ -103,6 +187,11 @@ PA5.GPIO_Label=LED_GREEN
 PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PC10.Locked=true
+PC10.Mode=Asynchronous
+PC10.Signal=USART3_TX
+PC11.Mode=Asynchronous
+PC11.Signal=USART3_RX
 PC13.Locked=true
 PC13.Mode=SYS_WakeUp1
 PC13.Signal=SYS_WKUP2
@@ -112,6 +201,10 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
+PC4.Mode=Asynchronous
+PC4.Signal=USART1_TX
+PC5.Mode=Asynchronous
+PC5.Signal=USART1_RX
 PF0-OSC_IN\ (PF0).GPIOParameters=GPIO_Label
 PF0-OSC_IN\ (PF0).GPIO_Label=MCO
 PF0-OSC_IN\ (PF0).Locked=true
@@ -149,7 +242,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_USART2_UART_Init-USART2-false-HAL-true,5-MX_TIM2_Init-TIM2-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART3_UART_Init-USART3-false-HAL-true
 RCC.AHBFreq_Value=16000000
 RCC.APBFreq_Value=16000000
 RCC.APBTimFreq_Value=16000000
@@ -181,8 +274,18 @@ RCC.USART1Freq_Value=16000000
 RCC.USART2Freq_Value=16000000
 RCC.VCOInputFreq_Value=16000000
 RCC.VCOOutputFreq_Value=128000000
+SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1_ETR.ConfNb=1
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
+TIM2.Period=16000
+TIM2.Pulse-PWM\ Generation1\ CH1=5000
+USART1.IPParameters=VirtualMode-Asynchronous
+USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
+USART3.IPParameters=VirtualMode-Asynchronous
+USART3.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-G071RB
