--- a/yc_stm32_practice.ioc
+++ b/yc_stm32_practice.ioc
@@ -14,7 +14,7 @@ Dma.USART1_RX.3.EventEnable=DISABLE
 Dma.USART1_RX.3.Instance=DMA1_Channel3
 Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.3.Mode=DMA_NORMAL
+Dma.USART1_RX.3.Mode=DMA_CIRCULAR
 Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_RX.3.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -31,7 +31,7 @@ Dma.USART1_TX.2.EventEnable=DISABLE
 Dma.USART1_TX.2.Instance=DMA1_Channel4
 Dma.USART1_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART1_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART1_TX.2.Mode=DMA_NORMAL
+Dma.USART1_TX.2.Mode=DMA_CIRCULAR
 Dma.USART1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART1_TX.2.PeriphInc=DMA_PINC_DISABLE
 Dma.USART1_TX.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -82,7 +82,7 @@ Dma.USART3_RX.5.EventEnable=DISABLE
 Dma.USART3_RX.5.Instance=DMA1_Channel6
 Dma.USART3_RX.5.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART3_RX.5.MemInc=DMA_MINC_ENABLE
-Dma.USART3_RX.5.Mode=DMA_NORMAL
+Dma.USART3_RX.5.Mode=DMA_CIRCULAR
 Dma.USART3_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_RX.5.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_RX.5.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -99,7 +99,7 @@ Dma.USART3_TX.4.EventEnable=DISABLE
 Dma.USART3_TX.4.Instance=DMA1_Channel5
 Dma.USART3_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
 Dma.USART3_TX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART3_TX.4.Mode=DMA_NORMAL
+Dma.USART3_TX.4.Mode=DMA_CIRCULAR
 Dma.USART3_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.4.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.4.Polarity=HAL_DMAMUX_REQ_GEN_RISING
@@ -277,7 +277,7 @@ RCC.VCOOutputFreq_Value=128000000
 SH.S_TIM2_CH1_ETR.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1_ETR.ConfNb=1
 TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
-TIM2.IPParameters=Channel-PWM Generation1 CH1,Pulse-PWM Generation1 CH1,Period
+TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,Pulse-PWM Generation1 CH1
 TIM2.Period=16000
 TIM2.Pulse-PWM\ Generation1\ CH1=5000
 USART1.IPParameters=VirtualMode-Asynchronous
