--- a/yc_stm32_practice.ioc
+++ b/yc_stm32_practice.ioc
@@ -121,15 +121,16 @@ Mcu.CPN=STM32G071RBT6
 Mcu.Family=STM32G0
 Mcu.IP0=DMA
 Mcu.IP1=FREERTOS
+Mcu.IP10=USART3
 Mcu.IP2=IWDG
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM2
-Mcu.IP7=USART1
-Mcu.IP8=USART2
-Mcu.IP9=USART3
-Mcu.IPNb=10
+Mcu.IP7=TIM3
+Mcu.IP8=USART1
+Mcu.IP9=USART2
+Mcu.IPNb=11
 Mcu.Name=STM32G071R(6-8-B)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC11
@@ -141,6 +142,7 @@ Mcu.Pin13=PC10
 Mcu.Pin14=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin15=VP_IWDG_VS_IWDG
 Mcu.Pin16=VP_SYS_VS_tim6
+Mcu.Pin17=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin2=PC14-OSC32_IN (PC14)
 Mcu.Pin3=PC15-OSC32_OUT (PC15)
 Mcu.Pin4=PF0-OSC_IN (PF0)
@@ -149,7 +151,7 @@ Mcu.Pin6=PA2
 Mcu.Pin7=PA3
 Mcu.Pin8=PA5
 Mcu.Pin9=PC4
-Mcu.PinsNb=17
+Mcu.PinsNb=18
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G071RBTx
@@ -167,6 +169,7 @@ NVIC.SavedPendsvIrqHandlerGenerated=true
 NVIC.SavedSvcallIrqHandlerGenerated=true
 NVIC.SavedSystickIrqHandlerGenerated=true
 NVIC.SysTick_IRQn=true\:3\:0\:false\:false\:false\:true\:false\:true\:false
+NVIC.TIM3_IRQn=true\:3\:0\:false\:false\:true\:true\:true\:true\:true
 NVIC.TIM6_DAC_LPTIM1_IRQn=true\:3\:0\:false\:false\:true\:false\:false\:true\:true
 NVIC.TimeBase=TIM6_DAC_LPTIM1_IRQn
 NVIC.TimeBaseIP=TIM6
@@ -294,6 +297,9 @@ TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM2.IPParameters=Channel-PWM Generation1 CH1,Period,Pulse-PWM Generation1 CH1
 TIM2.Period=16000
 TIM2.Pulse-PWM\ Generation1\ CH1=5000
+TIM3.IPParameters=Period,Prescaler
+TIM3.Period=999
+TIM3.Prescaler=63
 USART1.IPParameters=VirtualMode-Asynchronous
 USART1.VirtualMode-Asynchronous=VM_ASYNC
 USART2.IPParameters=VirtualMode-Asynchronous
@@ -306,6 +312,8 @@ VP_IWDG_VS_IWDG.Mode=IWDG_Activate
 VP_IWDG_VS_IWDG.Signal=IWDG_VS_IWDG
 VP_SYS_VS_tim6.Mode=TIM6
 VP_SYS_VS_tim6.Signal=SYS_VS_tim6
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 board=NUCLEO-G071RB
 boardIOC=true
 isbadioc=false
